PyMaker/datas/object2/RawHTML/i4501/Python_DOC_referPages.function-choose-website-syntax-error-basics.txt
<div class="post-text" itemprop="text">
<p>I'm trying to write a function to choose a website over several saved URLs.
My function looks like this:</p>
<pre><code>website = ''
def choose_website(website_name):
  nfl = 'https://www.nfl.com'
  nba = 'http://www.nba.com'
  fifa = 'http://www.fifa.com'
  If website_name = "nfl":
      website = nfl
  elif website_name = "nba":
      website = nba
  elif website_name = "fifa":
      website = fifa
  else:
      print 'Invalid website, please try again'
choose_website(raw_input("Please insert website(nfl/nba/fifa): ")
</code></pre>
<p>In short, I store the websites URLS in their names, and I ask the user to enter the names and this will store the desired website URL in the "website" variable.
However when I try to run this, I received a syntax error:</p>
<pre><code>  If website_name = "nfl":
            ^
SyntaxError: invalid syntax

Process finished with exit code 1
</code></pre>
<p>I have no idea why it does that, can anyone help me?
I'm using Python 3.4</p>
</div>
<div class="post-text" itemprop="text">
<p>As people say <code>python is case sensitive. Change If to if</code>
and replace <code>=</code> to double <code>==</code>
more details in the <a href="https://docs.python.org/3/reference/expressions.html#value-comparisons" rel="nofollow noreferrer">value-comparisons</a></p>
<pre><code>  if website_name == "nfl":
  #^^             ^^
      website = nfl
  elif website_name == "nba":
  #                 ^^
      website = nba
  elif website_name == "fifa":
  #                 ^^
      website = fifa
</code></pre>
<p>and please read the <a href="https://www.python.org/dev/peps/pep-0008/" rel="nofollow noreferrer">pep-8</a></p>
</div>
<span class="comment-copy">python is case sensitive. Change <code>If</code> to <code>if</code>.</span>
<span class="comment-copy">Capital I? Assignment (single equals) instead of equality comparison (double equals)?</span>
<span class="comment-copy">The Capital I was only here in the post (accident, sorryyy) But the double equals solved it! thank you :D</span>
<span class="comment-copy">Change '=' to '==' for equality comparison.</span>
<span class="comment-copy">Possible duplicate of <a href="https://stackoverflow.com/questions/7173850/possible-to-get-user-input-without-inserting-a-new-line">Possible to get user input without inserting a new line?</a></span>
